--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "liri-node-app",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/anhlu8/liri-node-app/issues"
   },
-  "homepage": "https://github.com/anhlu8/liri-node-app#readme"
+  "homepage": "https://github.com/anhlu8/liri-node-app#readme",
+  "description": "",
+  "dependencies": {
+    "dotenv": "^6.0.0",
+    "node-spotify-api": "^1.0.7",
+    "twitter": "^1.7.1"
+  }
 }
